<resources>
    <string name="app_name">Design Challenge</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="welcome">Welcome to the Android Challenge</string>
    <string name="sign_up">SIGN UP</string>
    <string name="title_activity_login">LoginActivity</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="menu">Menu</string>
    <string name="home">Home</string>
    <string name="about">About</string>
    <string name="logout">Logout</string>
    <string-array name="nav_menu_logout">
        <item>Menu</item>
        <item>Home</item>
        <item>About</item>
        <item>Logout</item>
    </string-array>

    <string-array name="nav_menu">
        <item>Menu</item>
        <item>Home</item>
        <item>About</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="email">Email Address</string>
    <string name="fname">First Name</string>
    <string name="lname">Last Name</string>
    <string name="app_version">Application version: </string>
    <string name="author">Author: Jhansi Tavva</string>
    <string name="ok">OK</string>
    <string name="label_email">Application launch form link</string>
    <string name="action_email">Email Link</string>
    <string name="category_email">Application Launch</string>
    <string name="label_greetings">Greetings screen</string>
    <string name="action_greetings">View</string>
    <string name="category_greetings">Greetings</string>

    <string name="gps_title">Location Services Not Active</string>
    <string name="turn_on_gps">Please Turn on Location Services / GPS</string>

</resources>
