<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/background">


    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:src="@drawable/ixonos_logo_small"
        android:scaleType="fitXY"
        android:background="@color/background"
        android:contentDescription="@string/app_name"
        android:layout_gravity="center" />


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/turn_on_gps"
        android:id="@+id/textView3"
        android:textColor="@android:color/white"
        android:background="@color/background"/>

    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/ok"
        android:id="@+id/button_ok"
        android:layout_gravity="center_horizontal"

        />
</LinearLayout>
