<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context=".GreetingFragment"
    >

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_menu_icon"
        android:src="@drawable/ic_menu_icon"
        android:onClick="onClickMenu"
        android:clickable="true"
        android:contentDescription="@string/app_name"/>



    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/about"
        android:id="@+id/aboutTextView"
        android:layout_marginTop="83dp"
        android:textColor="@color/textColor"
        android:layout_below="@+id/imageButton"
        android:layout_centerHorizontal="true"
        android:textSize="50sp"
        android:textStyle="bold"
        android:padding="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/app_version"
        android:id="@+id/versionTextView"
        android:layout_below="@+id/aboutTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:padding="20dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/author"
        android:id="@+id/authorTextView"
        android:layout_below="@+id/versionTextView"
        android:layout_centerHorizontal="true"
        android:textStyle="bold"
        android:textColor="@color/textColor"
        />
</RelativeLayout>
</ScrollView>