
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".GreetingFragment"
   >

        <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageButton"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/ic_menu_icon"
        android:src="@drawable/ic_menu_icon"
            android:onClick="onClickMenu"
            android:clickable="true" />



             <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sign_up"
            android:id="@+id/textView2"
            android:layout_marginTop="83dp"
            android:textColor="@color/textColor"
            android:layout_below="@+id/imageButton"
            android:layout_centerHorizontal="true"
                 android:textSize="50sp"
                 android:textStyle="bold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textEmailAddress"
            android:ems="10"
            android:id="@+id/emailEditText"
            android:layout_below="@+id/textView2"
            android:layout_centerHorizontal="true"
            android:hint="@string/email"
            android:textColorHint="@android:color/darker_gray"
            android:background="@color/edittext_background"
            android:gravity="center"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="41dp"
            android:layout_marginRight="41dp"
            android:layout_marginBottom="20dp" />
        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName|textCapSentences"
            android:gravity="center"
            android:ems="10"
            android:id="@+id/fNameEditText"
            android:layout_below="@+id/emailEditText"
            android:layout_centerHorizontal="true"
            android:layout_marginRight="41dp"
            android:layout_marginLeft="41dp"
            android:background="@color/edittext_background"
            android:hint="@string/fname"
            android:textColorHint="@android:color/darker_gray"

             />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:inputType="textPersonName|textCapSentences"
            android:hint="@string/lname"
            android:textColorHint="@android:color/darker_gray"
            android:ems="10"
            android:id="@+id/lNameEditText"
            android:layout_below="@+id/fNameEditText"
            android:layout_centerHorizontal="true"
            android:background="@color/edittext_background"
            android:gravity="center"
            android:layout_marginLeft="41dp"
            android:layout_marginTop="20dp"
            android:layout_marginRight="41dp"
            android:layout_marginBottom="41dp" />

    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="45dp"
        android:id="@+id/imageButton2"
        android:background="@android:color/transparent"
        android:drawableTop="@drawable/go_button"
        android:src="@drawable/selector_go_button"
        android:layout_below="@+id/lNameEditText"
        android:layout_marginRight="41dp"
        android:layout_marginLeft="41dp"
        android:scaleType="fitXY"
        android:clickable="true"
        android:onClick="onClickGoButton"/>

</RelativeLayout>
</ScrollView>